# ComfyUI-YOLOE26

./: .gitignore  LICENSE  README.md  README.zh-CN.md  README.zh-TW.md  RELEASE_CHECKLIST_SHORT.md  SMOKE_TEST_GUIDE.md  TODO_RELEASE_AND_USAGE.md  __init__.py  conftest.py  nodes.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
examples/: all_nodes_showcase_api.json  basic_api_workflow.json  practical_batch_multi_class_api.json  practical_best_instance_api.json  practical_class_masks_api.json  practical_detection_metadata_api.json  practical_prompt_segment_api.json  practical_refine_mask_api.json
scripts/: run_ci.py
tests/: test_nodes_helpers.py  test_real_ultralytics_smoke.py
